<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="neighbour_picture">neighbour avatar</string>
    <string name="About_Me">A propos de moi</string>
    <string name="ImageAddress">AddressNeighbour</string>
    <string name="ImagePhone">PhoneNumberNeighbour</string>
    <string name="ImageSocialNetwork">SocialNetworkNeighbour</string>
    <string name="addNeighbour">add a neighbour</string>
    <string name="title_activity_display_neighbour">DisplayNeighbourActivity</string>
    <string name="Text_About_Me">Describe what I like, what I want to do, What I wish to do, what I already did, What I Plan to Discover here.</string>
    <string name="AddFavorite">Ajouter aux favoris</string>
    <string name="ReturnMainActivity">Retour à l\'activité principale</string>
</resources>
